@@ -7,7 +7,7 @@
 #include "combobox/custom_combobox_popup_container_impl.H"
 #include "x/w/impl/container_element.H"
 #include "x/w/impl/nonrecursive_visibility.H"
-#include "x/w/text_param_literals.H"
+#include "x/w/custom_comboboxlayoutmanager.H"
 
 LIBCXXW_NAMESPACE_START
 
@@ -23,10 +23,12 @@ create_init_params(const popup &my_popup)
 
 custom_combobox_containerObj::implObj
 ::implObj(const container_impl &parent_container,
+	  const new_custom_comboboxlayoutmanager &nlm,
 	  const custom_combobox_popup_container &popup_container,
 	  const popup &attached_popup)
 	: superclass_t{parent_container, create_init_params(attached_popup)},
-	  popup_container{popup_container}
+	  popup_container{popup_container},
+	  label_font{nlm.appearance->list_font}
 {
 }
 
@@ -34,7 +36,7 @@ custom_combobox_containerObj::implObj::~implObj()=default;
 
 font_arg custom_combobox_containerObj::implObj::label_theme_font() const
 {
-	return "combobox"_theme_font;
+	return label_font;
 }
 
 LIBCXXW_NAMESPACE_END
