@@ -12,7 +12,7 @@
 #include <x/w/text_param.H>
 #include <x/w/input_field_configfwd.H>
 #include <x/w/listlayoutmanagerfwd.H>
-#include <x/w/list_appearance.H>
+#include <x/w/combobox_appearance.H>
 #include <x/w/scrollbar.H>
 #include <x/w/border_arg.H>
 #include <x/w/font_arg.H>
@@ -186,8 +186,8 @@ struct input_field_config_settings {
 
 	//! Appearance of the list search popup.
 
-	const_list_appearance input_field_search_appearance=
-		list_appearance::base::theme();
+	const_popup_list_appearance input_field_search_appearance=
+		combobox_appearance::base::theme();
 
 	//! Destructor
 
