@@ -1,0 +1,16 @@
+/*
+** Copyright 2019 Double Precision, Inc.
+** See COPYING for distribution information.
+*/
+#ifndef x_w_popup_list_appearance_h
+#define x_w_popup_list_appearance_h
+
+#include <x/w/popup_list_appearancefwd.H>
+#include <x/w/popup_list_appearanceobj.H>
+#include <x/ref.H>
+
+LIBCXXW_NAMESPACE_START
+
+LIBCXXW_NAMESPACE_END
+
+#endif
